result/0613-115747/stderr.log
/home/runner/work/pgi-2025-the_vivid_chronicles/pgi-2025-the_vivid_chronicles/src/main.c: In function ‘main’:
/home/runner/work/pgi-2025-the_vivid_chronicles/pgi-2025-the_vivid_chronicles/src/main.c:38:5: error: too few arguments to function ‘dimension’
   38 |     dimension();
      |     ^~~~~~~~~
In file included from /home/runner/work/pgi-2025-the_vivid_chronicles/pgi-2025-the_vivid_chronicles/src/main.c:8:
/home/runner/work/pgi-2025-the_vivid_chronicles/pgi-2025-the_vivid_chronicles/src/features.h:6:6: note: declared here
    6 | void dimension(char *source_path);
      |      ^~~~~~~~~
gmake[2]: *** [CMakeFiles/freud.dir/build.make:107: CMakeFiles/freud.dir/src/main.c.o] Error 1
gmake[2]: *** Waiting for unfinished jobs....
gmake[1]: *** [CMakeFiles/Makefile2:87: CMakeFiles/freud.dir/all] Error 2
gmake: *** [Makefile:136: all] Error 2

The process '/usr/local/bin/cmake' failed with exit code 2